<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SetMasterPasswordActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/icon_password_manager"
        android:src="@drawable/ic_app"
        />



    <TextView
        android:id="@+id/tvTitleWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_first_password"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextMasterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/hint_enter_master_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/password_visibility_master_enter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/visible_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_visibility"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextConfirmMasterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/hint_confirm_master_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/password_visibility_master_confirm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/visible_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_visibility"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonSetMasterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3F8DD1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/set_password"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonFingerprintLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1D6EB5"
        android:drawableStart="@drawable/ic_fingerprint"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btn_login_with_biometric"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSetMasterPassword" />





</LinearLayout>